--- a/app.json
+++ b/app.json
@@ -14,8 +14,8 @@
     "baileys-md",
     "md-bot"
   ],
-  "website": "https://github.com/Camtrappy00/bluebeetleV_2",
-  "repository": "https://https://github.com/Camtrappy00/bluebeetleV_2.git",
+  "website": "https://github.com/Camtrappy00/King-shelby",
+  "repository": "https://github.com/Camtrappy00/King-shelby.git",
   "logo": "https://telegra.ph/file/9830633c0e0e2f829665d.jpg",
   "success_url": "/",
   "env": {
